@@ -53,6 +53,8 @@
  *   - ~ generic matching routine segfault (rev. 11_b4)
  *   - ~ Buffer overrun when referencing 'curtime' field (rev. 11_b5)
  *   - ~ Log lookups had broken matching (glutil-precheck) (rev. 11_b6)
+ *   - % Accumulators processing grouped with general matching routines (had separate routine before) (rev. 11_b7)
+ *   - + 'depth' field (FILESYSTEM), see DATA_STRUCTURES (rev. 11_b7)
  *
  * v2.3:
  *
